# taiju

./: .gitignore  .project  Cargo.toml  LICENSE  Makefile  README.md
Classes/: AppDelegate.cpp  Util.h
Classes/bullet/: Bullet.h  BulletGenerator.cpp  BulletGenerator.h  BulletManager.cpp  BulletManager.h
Classes/chara/: Friend.cpp  Friend.h  Player.cpp  Player.h  Sora.cpp  Sora.h
Classes/core/: GameLayer.cpp  GameLayer.h  HUD.cpp  HUD.h
Classes/scene/: MainGameScene.cpp  MainGameScene.h
Resources/img/bullet/: bullet.csv
assets/scenario/: stage01.ron
doc/: abst.md  chapter0.md  character.md  class.md
editor/: Cargo.toml
proj.android/: AndroidManifest.xml
proj.ios_mac/MyCppGame.xcodeproj/: project.pbxproj
proj.ios_mac/ios/: Info.plist
proj.ios_mac/mac/: Info.plist
src/: app.rs  chapter.rs  donut.rs  lib.rs  main.rs  prelude.rs  scenes.rs  stage.rs  system.rs  taiju.rs
src/chapter/: components.rs  resources.rs  scenario.rs  states.rs
src/chapter/components/: background.rs  bullet.rs  bullets.rs  enemies.rs  enemy.rs  enemy_attack.rs  enemy_bullet.rs  geom.rs  geom_move.rs  geom_pos.rs  geometry.rs  lifecycle.rs  lifecycles.rs  scape.rs  witch.rs  (+2 more)
src/donut/: clock.rs  subjective_time.rs  value.rs
src/loading/: chapter.rs  loader.rs
src/scenes/: loading.rs  stage.rs
src/stage/: prelude.rs
src/taiju/: main.go  scenes.rs  system.rs
taiju/: Cargo.toml
taiju-editor/: Cargo.toml
taiju/assets/scenario/: stage01.ron
taiju/src/: bevy_extention.rs  lib.rs  loading.rs  main.rs  prelude.rs
taiju/src/bevy_extention/: scenario_loader.rs
taiju/src/chapter/: components.rs  scenario.rs  states.rs  system.rs
taiju/src/chapter/components/: enemy.rs  geometry.rs  lifecycle.rs  scape.rs  visibility.rs
taiju/src/chapter/resources/: enemy_bullet_server.rs
taiju/src/chapter/system/: components.rs
taiju/src/chapter/system/components/: enemy.rs  enemy_bullet.rs  geometry.rs  lifetime.rs  witch.rs
taiju/src/chapter/system/states/: scenario_reader.rs
taiju/src/donut/: subjective_time.rs
taiju/src/loading/: chapter.rs  loader.rs
(+79 files in other folders)
