[package]
name = "mebae"
version = "0.1.0"
authors = ["kaede"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#bevy = { path="../bevy/" }
#bevy = { git="https://github.com/bevyengine/bevy.git", rev="f520a34" }

[dependencies.amethyst]
path="../amethyst"
default-features=false
features=["parallel", "renderer", "utils", "no-slow-safety-checks"]
