[workspace]
members = [
  "taiju",
  "editor",
]
default-members = ["taiju"]

[workspace.dependencies]
anyhow = "1"
bevy = "0.10.1"
egui = "0.22.0"
bevy_egui = "0.20.3"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = [
  "Kaede Fujisaki <kaede@hexe.net>",
  "Momiji Jinzamomi <momiji@hexe.net>",
]
license = "CC-BY-SA-4.0"
