[package]
name = "editor"
[package.version]
workspace = true
[package.edition]
workspace = true
[package.authors]
workspace = true
[package.license]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
bevy = { workspace = true }
egui = { workspace = true }
bevy_egui = { workspace = true }
