[package]
name = "taiju"
edition = "2021"
version = "0.1.0"
authors = [
  "Kaede Fujisaki <kaede@hexe.net>",
  "Momiji Jinzamomi <momiji@hexe.net>",
]
license = "CC-BY-SA-4.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
bevy = { version = "0.11.2" }
